# CameraApp

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeUserPresets.json  explain.txt
include/: assert.h
src/: main.cpp
